# hiptext

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  artiste.cc  artiste.h  autogen.sh  charquantizer.cc  charquantizer.h  configure.ac  font.cc  font.h  graphic.cc  graphic.h  hiptext.cc  hiptext_main.cc  install-gflags.sh  install-glog.sh  jpeg.cc  jpeg.h  macterm.cc  macterm.h  movie.cc  movie.h  pixel.cc  pixel.h  pixel_parse.cc  pixel_parse.rl  pixel_test.cc  png.cc  png.h  sixelprinter.cc  termprinter.cc  termprinter.h  test.cc  trash.cc  unicode.cc  unicode.h  utf8.cc  (+6 more)
src/: artiste.cc  charquantizer.cc  css_color.rl  font.cc  graphic.cc  hiptext.cc  input.cc  jpeg.cc  macterm.cc  movie.cc  pixel.cc  pixel_parse.rl  png.cc  sixelprinter.cc  termprinter.cc  unicode.cc  x11.cc  xterm256.cc
src/hiptext/: artiste.h  graphic.h  input.h  jpeg.h  macterm.h  movie.h  sixelprinter.h  unicode.h  unused.h  x11.h  xterm256.h
test/: pixel_test.cc  xterm256_test.cc
